# sifis-message

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: docker.yaml  sifis-message.yml
.reuse/: dep5
docker/: Dockerfile-alpine-consumer  Dockerfile-alpine-runtime
src/: deser.rs  lib.rs  main.rs  response_handler.rs
