[package]
name = "sifis-message"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
futures-concurrency = "7.1.0"
futures-util = "0.3.26"
libp2p = { version = "0.50.1", features = ["rsa"] }
log = "0.4.17"
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
pin-project-lite = "0.2.9"
rand = "0.8.5"
rsa = "0.8.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
sifis-api = { git = "https://github.com/sifis-home/sifis-api.git", default-features = false, features = ["runtime"] }
sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht.git" }
tarpc = { version = "0.31", features = ["tokio1", "serde-transport"] }
tokio = { version = "1.26.0", features = ["macros", "time"] }
