[package]
name = "sifis-message"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SIFIS-Home developer API runtime reference implementation"

[features]
default = []
vendored = ["sifis-dht/vendored"]

[dependencies]
anyhow = "1.0.71"
base64 = { version = "0.21.3", features = ["std", "alloc"] }
bincode = "1.3.3"
clap = { version = "4.1.8", features = ["derive", "env"] }
env_logger = "0.10.0"
futures-concurrency = "7.1.0"
futures-util = "0.3.26"
log = "0.4.17"
pin-project-lite = "0.2.9"
quick-xml = { version = "0.30.0", features = ["serialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rsa = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
sifis-api = { git = "https://github.com/sifis-home/sifis-api.git", default-features = false, features = ["runtime"] }
sifis-config = { git = "https://github.com/sifis-home/libp2p-rust-dht.git" }
sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht.git" }
tarpc = { version = "0.31", features = ["tokio1", "serde-transport"] }
tokio = { version = "1.26.0", features = ["macros", "time", "process"] }
toml_edit = { version = "0.19.12", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
